crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__generator.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/parenthesized/generator.py
---
## AST

```
Module(
    ModModule {
        range: 0..36,
        body: [
            Expr(
                ExprStmt {
                    range: 0..15,
                    value: Generator(
                        GeneratorExpr {
                            range: 0..15,
                            elt: Starred(
                                StarredExpr {
                                    range: 1..3,
                                    value: Name(
                                        NameExpr {
                                            range: 2..3,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                            generators: [
                                Comprehension {
                                    range: 4..14,
                                    target: Name(
                                        NameExpr {
                                            range: 8..9,
                                            id: Name("x"),
                                            ctx: Store,
                                        },
                                    ),
                                    iter: Name(
                                        NameExpr {
                                            range: 13..14,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ifs: [],
                                    is_async: false,
                                },
                            ],
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 16..24,
                    value: Tuple(
                        TupleExpr {
                            range: 16..24,
                            elts: [
                                Named(
                                    NamedExpr {
                                        range: 17..23,
                                        target: Name(
                                            NameExpr {
                                                range: 17..18,
                                                id: Name("x"),
                                                ctx: Store,
                                            },
                                        ),
                                        value: NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 22..23,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            For(
                ForStmt {
                    range: 25..35,
                    is_async: false,
                    target: Name(
                        NameExpr {
                            range: 29..30,
                            id: Name("x"),
                            ctx: Store,
                        },
                    ),
                    iter: Name(
                        NameExpr {
                            range: 34..35,
                            id: Name("y"),
                            ctx: Load,
                        },
                    ),
                    body: [],
                    orelse: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | (*x for x in y)
  |  ^^ Syntax Error: Iterable unpacking cannot be used in a comprehension
2 | (x := 1, for x in y)
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |          ^^^ Syntax Error: Expected ')', found 'for'
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |                    ^ Syntax Error: Expected ':', found ')'
  |


  |
1 | (*x for x in y)
2 | (x := 1, for x in y)
  |                      Syntax Error: Expected a statement
  |
