crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__parenthesized__tuple.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/parenthesized/tuple.py
---
## AST

```
Module(
    ModModule {
        range: 0..267,
        body: [
            Expr(
                ExprStmt {
                    range: 83..86,
                    value: Tuple(
                        TupleExpr {
                            range: 83..86,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 84..84,
                                        id: Name(""),
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 88..94,
                    value: Tuple(
                        TupleExpr {
                            range: 88..94,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 89..90,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 92..93,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 96..101,
                    value: Tuple(
                        TupleExpr {
                            range: 96..101,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 97..98,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 119..121,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 120..121,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 122..123,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 122..123,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 157..162,
                    target: NumberLiteral(
                        NumberLiteralExpr {
                            range: 158..159,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                    annotation: NumberLiteral(
                        NumberLiteralExpr {
                            range: 161..162,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                    value: None,
                    simple: false,
                },
            ),
            Expr(
                ExprStmt {
                    range: 186..195,
                    value: Tuple(
                        TupleExpr {
                            range: 186..195,
                            elts: [
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 187..188,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                BinOp(
                                    BinOpExpr {
                                        range: 190..193,
                                        left: Name(
                                            NameExpr {
                                                range: 190..191,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                        op: Add,
                                        right: Name(
                                            NameExpr {
                                                range: 193..193,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: true,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 197..199,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 198..199,
                            value: Int(
                                1,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 201..202,
                    value: NumberLiteral(
                        NumberLiteralExpr {
                            range: 201..202,
                            value: Int(
                                2,
                            ),
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 255..267,
                    value: Tuple(
                        TupleExpr {
                            range: 255..267,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 255..256,
                                        id: Name("x"),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 258..259,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                                NumberLiteral(
                                    NumberLiteralExpr {
                                        range: 263..264,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 266..267,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Test cases for tuple expressions where the parser recovers from a syntax error.
2 | 
3 | (,)
  |  ^ Syntax Error: Expected an expression
4 | 
5 | (1,,2)
  |


  |
3 | (,)
4 | 
5 | (1,,2)
  |    ^ Syntax Error: Expected an expression or a ')'
6 | 
7 | (1,,)
  |


  |
5 | (1,,2)
6 | 
7 | (1,,)
  |    ^ Syntax Error: Expected an expression or a ')'
8 | 
9 | # Missing comma
  |


   |
 9 | # Missing comma
10 | (1 2)
   |    ^ Syntax Error: Expected ')', found int
11 | 
12 | # Dictionary element in a list
   |


   |
 9 | # Missing comma
10 | (1 2)
   |     ^ Syntax Error: Expected a statement
11 | 
12 | # Dictionary element in a list
   |


   |
 9 | # Missing comma
10 | (1 2)
   |      ^ Syntax Error: Expected a statement
11 | 
12 | # Dictionary element in a list
13 | (1: 2)
   |


   |
12 | # Dictionary element in a list
13 | (1: 2)
   |   ^ Syntax Error: Expected ')', found ':'
14 | 
15 | # Missing expression
   |


   |
12 | # Dictionary element in a list
13 | (1: 2)
   |  ^ Syntax Error: Invalid annotated assignment target
14 | 
15 | # Missing expression
   |


   |
12 | # Dictionary element in a list
13 | (1: 2)
   |      ^ Syntax Error: Expected a statement
14 | 
15 | # Missing expression
   |


   |
12 | # Dictionary element in a list
13 | (1: 2)
   |       ^ Syntax Error: Expected a statement
14 | 
15 | # Missing expression
16 | (1, x + )
   |


   |
15 | # Missing expression
16 | (1, x + )
   |         ^ Syntax Error: Expected an expression
17 | 
18 | (1; 2)
   |


   |
16 | (1, x + )
17 | 
18 | (1; 2)
   |   ^ Syntax Error: Expected ')', found ';'
19 | 
20 | # Unparenthesized named expression is not allowed
   |


   |
16 | (1, x + )
17 | 
18 | (1; 2)
   |      ^ Syntax Error: Expected a statement
19 | 
20 | # Unparenthesized named expression is not allowed
   |


   |
16 | (1, x + )
17 | 
18 | (1; 2)
   |       ^ Syntax Error: Expected a statement
19 | 
20 | # Unparenthesized named expression is not allowed
21 | x, y := 2, z
   |


   |
20 | # Unparenthesized named expression is not allowed
21 | x, y := 2, z
   |      ^^ Syntax Error: Expected ',', found ':='
   |
